--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,33 @@
   <head>
     <title>TubeTVTest</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <!-- Materialize Compiled and minified CSS -->
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+
+	  <!-- Materialize Compiled and minified JavaScript -->
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
   </head>
 
   <body>
+	  <nav>
+      <div class="nav-wrapper">
+      	<a href="/" class="brand-logo">tubeTV</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><%= link_to 'Home', root_url %></li>
+        <% if logged_in? %>
+          <li><%= link_to 'My Account', current_user %></li>
+          <li><%= link_to 'Sign Out', signout_path, method: 'delete' %></li>
+        <% else %>
+          <li><%= link_to 'Register', register_path %></li>
+          <li><%= link_to 'Sign In', signin_path %></li>
+        <% end %>
+      </div>
+    </nav>
+    <div class="notice"><%= flash[:success] %></div>
+    <div class="alert"><%= flash[:danger] %></div>
     <%= yield %>
   </body>
 </html>
