--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,16 +1,31 @@
 <!-- new user form -->
-<%= form_for @user do |f| %>
-	<%= f.label :username %>
-	<%= f.text_field :username %>
+<% provide(:title, 'Register') %>
+<h1>Register New Account</h1>
+
+<%= form_for :user, url: users_path do |f| %>
+	<%= render partial: 'application/errors', layout: false, locals: { errors: @errors } %>
 	
-	<%= f.label :email %>
-	<%= f.text_field :email %>
+	<p>
+		<%= f.label :username %>
+		<%= f.text_field :username %>
+	</p>
 
-	<%= f.label :password %>
-	<%= f.password_field :password %>
+	<p>
+		<%= f.label :email %>
+		<%= f.text_field :email %>
+	</p>
 
-	<%= f.label :password_confirmation, "Confirmation" %>
-	<%= f.password_field :password_confirmation %>
+	<p>
+		<%= f.label :password %>
+		<%= f.password_field :password %>
+	</p>
 
-	<%= f.submit "Create Account" %>
+	<p>
+		<%= f.label :password_confirmation, "Confirmation" %>
+		<%= f.password_field :password_confirmation %>
+	</p>
+
+	<p>
+		<%= f.submit "Create Account" %>
+	</p>
 <% end %>
