Requests to /videos/:youtube_video_id will now show youtube video on the page.

--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,6 +1,9 @@
-<p><%= @video.title %></p>
-
-<div class="video">
-	<iframe width="480" height="360" src=<%= @video_link %> frameborder="0" allowfullscreen></iframe>
+<div class="video center-align">
+	<div class="video-title">
+		<p><%= video.title %></p>
+	</div>
+	<div class="video-content">
+		<iframe width="864" height="624" src=<%= video_link %> frameborder="0" allowfullscreen></iframe>
+	</div>
 </div>
 
